5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4070/executions/1668_2966.log
== SUBMITION (2019-04-15 19:25:24) 
-- CODE:
ingresso = float(input("preço integral ingresso:"))
quantidade = int(input("total de ingresso:"))
Mulher = (ingresso*0.2) + ingresso
Homem = ingresso

if (Mulher = S):
	mensage = S
	print(mensagem)
	print(round(ingresso, 2))
	print(quantidade)
	
else:
	mensagem = N
	print(mensagem)
	print(round(ingresso, 2))
	print (quantidade)
-- EXECUTION TIME:
0.198907
-- ERROR:
  File "/home/codebench/codes/1668/2966/main.py", line 6
    if (Mulher = S):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:25:27) 
-- CODE:
ingresso = float(input("preço integral ingresso:"))
quantidade = int(input("total de ingresso:"))
Mulher = (ingresso*0.2) + ingresso
Homem = ingresso

if (Mulher = S):
	mensage = S
	print(mensagem)
	print(round(ingresso, 2))
	print(quantidade)
	
else:
	mensagem = N
	print(mensagem)
	print(round(ingresso, 2))
	print (quantidade)
-- ERROR:
File "XXXX", line 6
    if (Mulher = S):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:26:38) 
-- CODE:
ingresso = float(input("preço integral ingresso:"))
quantidade = int(input("total de ingresso:"))
Mulher = (ingresso * 0.2) + ingresso
Homem = ingresso

if (Mulher = S):
	mensage = S
	print(mensagem)
	print(round(ingresso, 2))
	print(quantidade)
	
else:
	mensagem = N
	print(mensagem)
	print(round(ingresso, 2))
	print (quantidade)
-- EXECUTION TIME:
0.174355
-- ERROR:
  File "/home/codebench/codes/1668/2966/main.py", line 6
    if (Mulher = S):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:27:48) 
-- CODE:
ingresso = float(input("preço integral ingresso:"))
quantidade = int(input("total de ingresso:"))
Mulher = (ingresso * 0.2) + ingresso
Homem = ingresso

if (Mulher = S):
	mensage = S
	print(mensagem)
	print(round(Mulher, 2))
	print(quantidade)
	
else:
	mensagem = N
	print(mensagem)
	print(round(Homem, 2))
	print (quantidade)
-- EXECUTION TIME:
0.140648
-- ERROR:
  File "/home/codebench/codes/1668/2966/main.py", line 6
    if (Mulher = S):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:33:33) 
-- CODE:
ingresso = float(input("preço integral ingresso:"))
quantidade = int(input("total de ingresso:"))
Mulher = (ingresso * 0.2) + ingresso
Homem = ingresso

if (Mulher = S):
	mensagem = (Mulher * quantidade)
	
	
else:
	mensagem = (Homem * quantidade)

print(round(mensagem, 2))
	
-- EXECUTION TIME:
0.14248
-- ERROR:
  File "/home/codebench/codes/1668/2966/main.py", line 6
    if (Mulher = S):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:33:36) 
-- CODE:
ingresso = float(input("preço integral ingresso:"))
quantidade = int(input("total de ingresso:"))
Mulher = (ingresso * 0.2) + ingresso
Homem = ingresso

if (Mulher = S):
	mensagem = (Mulher * quantidade)
	
	
else:
	mensagem = (Homem * quantidade)

print(round(mensagem, 2))
	
-- ERROR:
File "XXXX", line 6
    if (Mulher = S):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:34:23) 
-- CODE:

ingresso = float(input("preço integral ingresso:"))
quantidade = int(input("total de ingresso:"))
Mulher = (ingresso * 0.2) + ingresso
Homem = ingresso

if (Mulher):
	mensagem = (Mulher * quantidade)
	
	
else:
	mensagem = (Homem * quantidade)

print(round(mensagem, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:35:14) 
-- CODE:

ingresso = float(input("preço integral ingresso:"))
quantidade = int(input("total de ingresso:"))
Mulher = (ingresso * 0.2) + ingresso
Homem = ingresso

if (Mulher):
	mensagem = (Mulher * quantidade)
	
	
else:
	mensagem = (Homem * quantidade)

print(round(mensagem, 2))
	
-- EXECUTION TIME:
0.186728
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 2, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:35:19) 
-- CODE:

ingresso = float(input("preço integral ingresso:"))
quantidade = int(input("total de ingresso:"))
Mulher = (ingresso * 0.2) + ingresso
Homem = ingresso

if (Mulher):
	mensagem = (Mulher * quantidade)
	
	
else:
	mensagem = (Homem * quantidade)

print(round(mensagem, 2))
	
-- EXECUTION TIME:
0.14146
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1668/2966/main.py", line 2, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:35:20) 
-- CODE:

ingresso = float(input("preço integral ingresso:"))
quantidade = int(input("total de ingresso:"))
Mulher = (ingresso * 0.2) + ingresso
Homem = ingresso

if (Mulher):
	mensagem = (Mulher * quantidade)
	
	
else:
	mensagem = (Homem * quantidade)

print(round(mensagem, 2))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    ingresso = float(input())
ValueError: could not convert string to float: 'S'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:42:17) 
-- CODE:
S = ingresso*0.2
N = ingresso
ingresso = float(input("preco ingresso:"))
t = int(input("total de ingresso:")

if (S):
		  mensagem = ((S + ingresso)*t)

else :
		  mensagem = (N*t)

print(round(mensagem, 2))
		  




-- EXECUTION TIME:
0.160682
-- ERROR:
  File "/home/codebench/codes/1668/2966/main.py", line 6
    if (S):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:42:20) 
-- CODE:
S = ingresso*0.2
N = ingresso
ingresso = float(input("preco ingresso:"))
t = int(input("total de ingresso:")

if (S):
		  mensagem = ((S + ingresso)*t)

else :
		  mensagem = (N*t)

print(round(mensagem, 2))
		  




-- ERROR:
File "XXXX", line 6
    if (S):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:43:25) 
-- CODE:

S = ingresso*0.2
N = ingresso
ingresso = float(input("preco ingresso:"))
t = int(input("total de ingresso:")

if (mulher = = S):
		  mensagem = ((S + ingresso)*t)

else :
		  mensagem = (N*t)

print(round(mensagem, 2))
		  




-- EXECUTION TIME:
0.19936
-- ERROR:
  File "/home/codebench/codes/1668/2966/main.py", line 7
    if (mulher = = S):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:43:32) 
-- CODE:

S = ingresso*0.2
N = ingresso
ingresso = float(input("preco ingresso:"))
t = int(input("total de ingresso:")

if (mulher == S):
		  mensagem = ((S + ingresso)*t)

else :
		  mensagem = (N*t)

print(round(mensagem, 2))
		  




-- EXECUTION TIME:
0.190985
-- ERROR:
  File "/home/codebench/codes/1668/2966/main.py", line 7
    if (mulher == S):
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:43:33) 
-- CODE:

S = ingresso*0.2
N = ingresso
ingresso = float(input("preco ingresso:"))
t = int(input("total de ingresso:")

if (mulher == S):
		  mensagem = ((S + ingresso)*t)

else :
		  mensagem = (N*t)

print(round(mensagem, 2))
		  




-- ERROR:
File "XXXX", line 7
    if (mulher == S):
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 19:50:33) 
-- CODE:
S=float(input("ingresso mulher :"))
N=float(input("ingresso nao mulher:"))
ingresso = float(input("preco ingresso:"))
t = int(input("total de ingresso:")


if (mulher):
		  mensagem = (((S*0.2*ingresso) + ingresso)*t)

else :
		  mensagem = (ingresso*t)

print(round(mensagem, 2))
		  




-- EXECUTION TIME:
0.186435
-- ERROR:
  File "/home/codebench/codes/1668/2966/main.py", line 7
    if (mulher):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 19:52:41) 
-- CODE:
S=float(input("ingresso mulher :"))
N=float(input("ingresso nao mulher:"))
ingresso = float(input("preco ingresso:"))
t = int(input("total de ingresso:")


if (mulher):
		  mensagem = (((S*0.2*ingresso) + ingresso)*t)

else :
		  mensagem = (ingresso*t)

print(round(mensagem, 2))
		  




-- ERROR:
File "XXXX", line 7
    if (mulher):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
